--- a/PROJETO-I.NET/index.html
+++ b/PROJETO-I.NET/index.html
@@ -135,7 +135,7 @@
             </section>
         </main>
         <footer>
-            <p>@ I.NET 2023. Todos os direitos reservados.</p>
+            <p>&copy; I.NET 2023. Todos os direitos reservados.</p>
         </footer>
    </div>
 </body>
